Add search advertisement feature
